syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform{
  rpc GetAllPlatfoms(GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel{
  string platformId = 1;//position of the property
  string name = 2;
  string publisher =3;
  string cost = 4;
}

message PlatformResponse{
  repeated GrpcPlatformModel platform = 1;
}